@@ -85,7 +85,7 @@ int main(int argc, char **argv)
 	// init lib
 	ticables_library_init();
 
-#if 0
+#if 1
 	ticables_probing_do(&probing, 5, PROBE_ALL);
 	for(i = 1; i <= 7; i++) 
 		printf("%i: %i %i %i %i\n", i, probing[i][1], probing[i][2], probing[i][3], probing[i][4]);
@@ -118,7 +118,7 @@ int main(int argc, char **argv)
 	err = ticables_cable_open(handle);
 	if(err) print_lc_error(err);
 	if(err) return -1;
-#if 1
+#if 0
 	// simple test with DirectLink hand-helds (buf size req/neg)
 	buf[0]=0x00; buf[1]=0x00; buf[2]=0x00; buf[3]=0x04;
 	buf[4]=0x01;
@@ -136,7 +136,7 @@ int main(int argc, char **argv)
 	printf("\n");
 #endif
 
-#if 1
+#if 0
 	// mode set
 	i = 0;
 	buf[i++]=0x00; buf[i++]=0x00; buf[i++]=0x00; buf[i++]=0x10;
