@@ -8,6 +8,7 @@ Log:
 	- BSD libusb fixes (tijl)
 	- changed PID_TI84P to 0xE003 and added PID_TI84P_SE as 0xE008
 	- added probing of TI84+ non-SE
+	- probe_usb_devices: returns an empty array rather than garbage when function fails
 	
 - 21/02/2006, version 1.0.1: roms
 	- detect i[3456]86-apple-darwin* (Intel Macs) and x86_64-apple-darwin* (probably coming soon)
